@@ -796,7 +796,7 @@ L<http://rt.cpan.org>.
 =head1 REPOSITORY
 
 Pod::Manual's development git repository can be accessed at
-http://babyl.dyndns.org/git/pod-manual.git.
+git://github.com/yanick/pod-manual.git
 
 =head1 AUTHOR
 
